--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "multiverse-mixtape",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,6 +11,8 @@
   },
   "dependencies": {
     "@fontsource/vt323": "^5.1.0",
+    "formidable": "^3.5.2",
+    "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
