--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@fontsource/vt323": "^5.1.0",
+    "@stripe/stripe-js": "^5.6.0",
     "formidable": "^3.5.2",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^17.6.0"
   },
   "devDependencies": {
     "eslint": "^8",
