--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formidable": "^3.5.2",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^17.6.0"
