--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@fontsource/vt323": "^5.1.0",
     "@stripe/stripe-js": "^5.6.0",
     "formidable": "^3.5.2",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^14.2.24",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
